Fix spacing in markdown toc

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -173,8 +173,11 @@ body {
 #markdown-toc, .page-toc {
 	list-style-type: none;
 	padding: 0;
-	li li {
-		list-style-type: none;
+	ul {
+		margin-bottom: 0;
+		li {
+			list-style-type: none;
+		}
 	}
 }
 
